--- a/client/painel/css/painel.css
+++ b/client/painel/css/painel.css
@@ -639,8 +639,39 @@ input:checked + .slider::before {
 }
 
 /* Relatórios */
-
 .value-card {
     font-size: 20px;
     color: var(--color-black);
+}
+
+/* Modal upload Logo */
+.modal-cadastro .modal-content {
+    background-color: var(--color-white);
+}
+
+.upload #drop-area {
+    border: 2px dashed var(--color-primary);
+    border-radius: 20px;
+    padding: 70px 30px;
+    background: var(--color-white);
+}
+
+.upload #drop-area.highlight {
+    background-color: var(--color-secondary);
+}
+
+.upload p {
+    margin-top: 0;
+    color: var(--color-black);
+}
+
+.upload .my-form {
+    margin-bottom: 10px;
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.upload #fileElem {
+    display: none;
 }
